<resources>
    <string name="app_name">Amazfit BIP Assistant</string>
    <string name="tab_text_1">Alarms</string>
    <string name="tab_text_2">Controls</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_remove_ads">Remove ads</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="preference_file_key" translatable="false">AMAZFIT</string>
    <string name="preferences_watch_address" translatable="false">watch_address</string>
    <string name="multiple_click_action" translatable="false">actionkek</string>
    <string name="multiple_delay" translatable="false">okmygeadisspinning</string>
     <string name="banner_id" translatable="false">ca-app-pub-5911662140305016/5042215561</string>
    <!--<string name="banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="long_press_control" translatable="false">long_press_kek</string>
    <string name="long_press_googass" translatable="false">googass_lol</string>
    <string name="num_uses" translatable="false">num_uses</string>
    <string name="can_rate" translatable="false">can_rate</string>
    <string name="rate_app_question">Would you like to rate the app?</string>
    <string name="rate_later">Later</string>
    <string name="rate_rate">Rate</string>
    <string name="rate_never">Never!</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_connected">Connected</string>
    <string name="if_watch_not_visible"><![CDATA[If watch is not in the list enter its Bluetooth address from Mi-Fit->Amazfit Bip->Bluetooth Address]]></string>
    <string name="bluetooth_address">Bluetooth Address</string>
    <string name="refresh">Refresh</string>
    <string name="no_devices_found">No compatible Amazfit Bip devices were found</string>
    <string name="_2_pause_3_next">2 Pause 3 Next</string>
    <string name="_2_previous_3_next">2 Previous 3 Next</string>
    <string name="_2_next_3_previous">2 Next 3 Previous</string>
    <string name="_2_pause_3_next_4_previous">2 Pause 3 Next 4 Previous</string>
    <string name="_2_previous_3_pause_4_next">2 Previous 3 Pause 4 Next</string>
    <string name="_2_pause_3_previous_4_next">2 Pause 3 Previous 4 Next</string>
    <string name="no_action">No action</string>
    <string name="multiple_button_click_actions">Multiple button click actions</string>
    <string name="interval_between_multiple_clicks">Interval between multiple clicks</string>
    <string name="enable_long_press_volume_control">Enable long press volume control</string>
    <string name="enable_long_press_google_assistant_start">Enable long press Google Assistant start</string>
    <string name="long_press_volume_explanation"><![CDATA[Settings->Long button press should be \'Turn Off\' on BIP. Click Hang up to reduce volume, click Ignore to increase volume, click watch button to cancel. Will not work if DND mode is on]]></string>
    <string name="take_pic">take_pic</string>
</resources>
